# mangrove

./: .gitignore  BotController.py  FocusLevel.py  LICENSE  README.md  STTController.py  TTSController.py  WakeUpVoiceDetector copy.py  WakeUpVoiceDetector.py  WakeUpVoiceDetectorTMP.py  agents.py  assistant_controller.py  config.yml  domain.yml  download_lm_unopt.sh  download_lms_unopt.sh  download_optimal_model.sh  download_stt_model.bat  frontend.py  host.py  launcher.py  main.py  middleware.py  middleware_api.py  middleware_direct.py  middleware_loaded.py  pyproject.toml  requirements-apple-silicon.txt  requirements-old.txt  requirements.txt  requirements_new.txt  server.py  setup.py  start.bat  start.sh  start_on_cpu.bat  start_on_gpu.bat  storage_manager.py  test_bot.py  test_sound_stream.py  (+5 more)
DeepSpeechHotword/: README.md  mic_streaming.py
actions/: actions.py
aegis_ai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bot/: BotController.py  WorldState.py  __init__.py  bot_controller copy.py  bot_controller.py  bot_state.py  command_output_description.md  config.yml  domain.yml  senva_voice_commands_list.txt  stage.py
core/: __init__.py  audio_packet.py  context.py  data_buffer.py  stage.py  utils.py
data/: LSAR.yml  capture_audio.yml  click.yml  declutter.yml  map.yml  map_placement.yml  navigation.yml  nlu.yml  pins.yml  place_map.yml  rules.yml  sample_tagging.yml  set_north.yml  show_panel.yml  stories.yml  take_photo.yml  terrain.yml  toggle.yml  toggle_feature.yml  toggle_follow.yml
debug-and-drafts/: frontend_bot.py  middleware_bot.py  sample_audio_binary.txt  stt_only_server.py  stt_server_archived.py  test.py
mangrove/: __init__.py
memory/: WorldState.py  __init__.py  memory.sample  world_state.py
models/: 20220226-182803-abstract-changeset.tar.gz.REMOVED.git-id  20220226-184256-moderato-italic.tar.gz.REMOVED.git-id  20220226-222433-long-material.tar.gz.REMOVED.git-id  Hello-eva_en_windows_v2_1_0.ppn  backup.tar.gz.REMOVED.git-id  model.tar.gz.REMOVED.git-id
prototype/: package-lock.json  server.js
samples/: sample_1.json
stt/: DataBuffer.py  FocusLevel.py  STTController.py  __init__.py  (+13 more)
stt-server-draft/: BotController.py  README.md  STTController.py  TTSController.py  main.py  requirements.txt  stt_only_server.py  stt_server.py  stt_server_archived.py  test.py
(+135 files in other folders)
